# adk-live-translator

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_e2e.py  test_long.py
app/: dict.csv  main.py  warmup.pcm
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js  audio-player.js  audio-recorder.js  pcm-player-processor.js  pcm-recorder-processor.js
app/translator_agent/: __init__.py  agent.py
tests/: repro_leak.py  test_long.py
